--- a/ClinicManagementN/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure.csproj
+++ b/ClinicManagementN/src/Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
   </ItemGroup>
 
   <PropertyGroup>
