--- a/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
+++ b/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.Development.json
@@ -7,6 +7,9 @@
     "BlazorServerUrl": "https://localhost:7004",
     "IdentityServerUrl": "https://localhost:7066"
   },
+  "RabbitMqSetting": {
+    "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
