--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -10,8 +10,10 @@
     "SecondsToCheckAuthenticationStateDuetime": 1,
     "SecondsToCheckAuthenticationStatePeriod": 60,
     "SecondsToRefreshUserCache": 60,
+    "SuffixRouteForAccessToken": "cmat",
     "SuffixRouteForClinicManagementApi": "cma",
-    "SuffixRouteForClinicManagementNotificationsApi": "cmna"
+    "SuffixRouteForClinicManagementNotificationsApi": "cmna",
+    "SuffixRouteForClinicManagementNotificationsHub": "notificationhub"
   },
   "CookieSetting": {
     "UserSettingsKey": "userSettings"
