--- a/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Domain/Fnunez.VeterinaryClinic.SchedulingNotifications.Domain.csproj
+++ b/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Domain/Fnunez.VeterinaryClinic.SchedulingNotifications.Domain.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Domain" Version="1.3.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
