--- a/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
+++ b/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Fnunez.VeterinaryClinic.SchedulingNotifications.Domain\Fnunez.VeterinaryClinic.SchedulingNotifications.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
