--- a/SchedulingN/src/Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure.csproj
+++ b/SchedulingN/src/Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\Core\Fnunez.VeterinaryClinic.SchedulingNotifications.Application\Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Infrastructure" Version="1.3.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
