--- a/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
+++ b/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.2" />
   </ItemGroup>
 
