--- a/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
+++ b/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.2" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
   </ItemGroup>
 
   <PropertyGroup>
