--- a/SchedulingN/src/Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure.csproj
+++ b/SchedulingN/src/Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure/Fnunez.VeterinaryClinic.SchedulingNotifications.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Infrastructure" Version="1.3.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.3" />
   </ItemGroup>
 
   <PropertyGroup>
