--- a/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/Fnunez.VeterinaryClinic.SchedulingNotifications.Api.csproj
+++ b/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/Fnunez.VeterinaryClinic.SchedulingNotifications.Api.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
