--- a/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
+++ b/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SchedulingNotifications;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
